--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "1.18.2",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.1"
   }
 }
