--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write --config .prettierrc src/**",
     "fix": "npm run format && npm run lint",
     "build": "webpack --config config/webpack.pro.js",
-    "dev": "webpack-dev-server --config config/webpack.dev.js"
+    "dev": "webpack-dev-server --config config/webpack.dev.js",
+    "precommit": "npm run fix"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.4",
     "prettier": "1.18.2",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
