--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "init": "npm i",
     "lint": "eslint src/ --fix",
-    "format": "prettier --write --config .prettierrc src/**",
+    "format": "prettier --write --config .prettierrc 'src/**/*'",
     "fix": "npm run format && npm run lint",
     "build": "webpack --config config/webpack.pro.js",
     "dev": "webpack-dev-server --config config/webpack.dev.js",
@@ -18,16 +18,23 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.4",
+    "mini-css-extract-plugin": "^0.8.0",
     "prettier": "1.18.2",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "vue": "^2.6.10"
   }
 }
