--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+        },
+        "useBuiltIns": "usage"
+      }
+    ]
+  ],
+  "plugins": ["transform-vue-jsx"]
 }
