--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
   "rules": {
     "one-var": 0,
     "func-names": 0,
-    "func-style": 0
+    "func-style": 0,
+    "sort-keys": 0,
+    "sort-imports": 0,
+    "capitalized-comments": 0
   },
   "plugins": ["html"],
   "globals": {
